# mcp-client

./: .gitignore
front/: api_client.py  main.py  requirements.txt
mcp-client/: README.md  __init__.py  app.py  config.py  main.py  mcp_client.py  mcp_server.py  models.py  pyproject.toml  requirements.txt
mcp-client/routers/: query_router.py
